# article-digital-object-identifier-fetcher

./: .gitignore  CHANGELOG.md  ISSUES.md  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  project_task.md
.github/workflows/: ci.yml  release.yml
configs/: sample.toml
configs/labs/: lab_x_dois.txt
docs/: QUICKSTART.md  clinician_quickstart.md  mini-review.md
prompts/: codex-guidance.md
scripts/: run-tests.sh
src/adoif/: __init__.py  cli.py  db.py  exporters.py  models.py  reporting.py  settings.py  utils.py
src/adoif/services/: __init__.py  batch.py  extraction.py  notes.py  pdf_fetcher.py  pipeline.py  resolvers.py  schedule.py  screening.py  search.py  storage.py  verification.py
src/adoif/web/: __init__.py  app.py
src/adoif/web/templates/: base.html  extractions.html  index.html  insights.html  notes.html  screening.html  screening_detail.html
tests/: test_batch_scanner.py  test_cli.py  test_exporters.py  test_extraction_service.py  test_models.py  test_note_service.py  test_pipeline.py  test_reporting.py  test_schedule_service.py  test_screening_service.py  test_search_aggregator.py  test_storage_manifest.py  test_storage_sqlite.py  test_utils.py  test_web_app.py
