[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "adoif"
version = "0.1.0"
description = "Article / DOI fetcher that builds a longitudinal medical research library."
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{name = "Stephen Jerge"}]
license = {text = "MIT"}
dependencies = [
  "typer[all]>=0.12.3",
  "rich>=13.7.1",
  "httpx>=0.27.2",
  "tenacity>=9.0.0",
  "pydantic>=2.8.2",
  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0.32",
  "aiofiles>=24.1.0",
  "aiohttp>=3.10.5",
  "python-dotenv>=1.0.1",
  "structlog>=24.3.0",
  "pyyaml>=6.0.2",
  "pyarrow>=17.0.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "coverage[toml]>=7.6.1",
  "mypy>=1.11.1",
  "ruff>=0.5.6",
  "black>=24.8.0",
  "types-pyyaml>=6.0.12.20240724",
]

[project.scripts]
adoif = "adoif.cli:app"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["adoif"]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["adoif"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -q"
asyncio_mode = "strict"
